objects/Pepper_Settlement_Data__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <externalId>true</externalId>
        <label>ApplicationID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BorrowerState__c</fullName>
        <label>BorrowerState</label>
        <picklist>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Pepper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formula_Test__c</fullName>
        <formula>TEXT(CEILING(((SettlementDate__c - DATE(YEAR(SettlementDate__c ), 1, 1) + 1) + 
MOD(DATE(YEAR(SettlementDate__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7)) +&apos;-&apos;+ TEXT(YEAR(SettlementDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_FK__c</fullName>
        <externalId>true</externalId>
        <label>Mortgage FK</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProductClassName__c</fullName>
        <label>ProductClassName</label>
        <picklist>
            <picklistValues>
                <fullName>Near Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SettlementDate__c</fullName>
        <label>SettlementDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SplitNumber__c</fullName>
        <label>SplitNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved in Principle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Documents Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mortgage Settlement Data</label>
    <nameField>
        <label>Pepper Settlement Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mortgage Settlement Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>